[gd_scene load_steps=12 format=2]

[ext_resource path="res://common/monochrome-transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://audio/sfx/EnemySFX/EnemyArmourSFX/CHAINMvmt_Chain Light Quick Movement 04.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sfx/EnemySFX/EnemyArmourSFX/CHAINMvmt_Chain Light Quick Movement 05.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/EnemySFX/EnemyArmourSFX/CHAINMvmt_Chain Light Quick Movement 03.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 05.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 02.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 04.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/sfx/FootstepSFX/FOLEYFeet_CleanConcrete_Boots_Medium 06.wav" type="AudioStream" id=9]
[ext_resource path="res://common/bloodvision.material" type="Material" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 480, 0, 16, 16 )

[node name="SpriteShaded" type="Sprite" parent="."]
visible = false
material = ExtResource( 10 )
z_index = 5
z_as_relative = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 480, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SightTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 4.0

[node name="EnemySFX" type="Node2D" parent="."]

[node name="EnemyBootsSFX" type="Node2D" parent="EnemySFX"]

[node name="EnemyBootsSFX1" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyBootsSFX"]
stream = ExtResource( 7 )
volume_db = -6.0
pitch_scale = 1.2
bus = "SFX"

[node name="EnemyBootsSFX2" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyBootsSFX"]
stream = ExtResource( 8 )
volume_db = -6.0
pitch_scale = 1.2
bus = "SFX"

[node name="EnemyBootsSFX3" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyBootsSFX"]
stream = ExtResource( 6 )
volume_db = -6.0
pitch_scale = 1.2
bus = "SFX"

[node name="EnemyBootsSFX4" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyBootsSFX"]
stream = ExtResource( 9 )
volume_db = -6.0
pitch_scale = 1.2
bus = "SFX"

[node name="EnemyArmourSFX" type="Node2D" parent="EnemySFX"]

[node name="EnemyArmourSFX1" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyArmourSFX"]
stream = ExtResource( 5 )
volume_db = -6.0
pitch_scale = 0.65
bus = "SFX"

[node name="EnemyArmourSFX2" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyArmourSFX"]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 0.65
bus = "SFX"

[node name="EnemyArmourSFX3" type="AudioStreamPlayer2D" parent="EnemySFX/EnemyArmourSFX"]
stream = ExtResource( 4 )
volume_db = -6.0
pitch_scale = 0.65
bus = "SFX"

[connection signal="timeout" from="SightTimer" to="." method="_on_SightTimer_timeout"]
